# kissa

./: Cargo.toml
.claude/: CLAUDE.md
.claude/ways/: _template.md
docs/: kissa-spec.md
docs/architecture/: adr.yaml
docs/architecture/core/: ADR-100-rust-single-binary-architecture.md  ADR-101-libgit2-for-internal-operations.md  ADR-102-graph-data-model-with-structured-filters.md  ADR-103-sqlite-index-with-wal-mode.md  ADR-104-three-axis-repo-classification-taxonomy.md  ADR-105-testing-strategy.md  ADR-106-dynamic-classification-rules-engine.md
docs/architecture/mcp/: ADR-300-terse-text-mcp-responses-with-state-tags.md  ADR-301-read-only-batch-tool-with-plan-apply-for-writes.md
docs/architecture/security/: ADR-500-difficulty-levels-as-permission-model.md
docs/scripts/: adr
src/: error.rs  lib.rs  main.rs
src/cli/: display.rs  mod.rs  output.rs
src/cli/commands/: classify.rs  config.rs  freshness.rs  info.rs  list.rs  mod.rs  scan.rs  status.rs
src/config/: mod.rs  types.rs
src/core/: classify.rs  filter.rs  git_ops.rs  index.rs  mod.rs  permissions.rs  repo.rs  scanner.rs
src/core/index/: mod.rs  types.rs
src/mcp/: format.rs  mod.rs  resources.rs  tools.rs
